[package]
name = "message-hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
stylus-sdk       = { version = "0.10.0" }
# Must match the versions stylus-sdk 0.10 locks to (alloy 1.x)
alloy-primitives = { version = "1.3", default-features = false }
alloy-sol-types  = { version = "1.3", default-features = false }
mini-alloc       = "0.4.2"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
